# exp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/architecture/: exp-cli-spec.md
examples/: agent-workflow.md  prompt-eval.sh
src/: db.rs  display.rs  main.rs  models.rs
src/commands/: comment.rs  compare.rs  create.rs  delete.rs  describe.rs  export.rs  guide.rs  list.rs  mod.rs  plan.rs  run.rs  status.rs  templates.rs  var.rs
tests/: smoke.rs
