[package]
name = "exp"
version = "0.1.2"
edition = "2024"
description = "CLI experiment tracker for agent runs, prompt testing, and simulations"
license = "MIT"
repository = "https://github.com/Battle-Creek-LLC/exp"
readme = "README.md"
keywords = ["experiment", "cli", "tracking", "agent"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/exp-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "exp{ binary-ext }"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = "1"
comfy-table = "7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
serde_json = "1"
